--- a/src/app/components/shared/nav-bar/nav-bar.component.scss
+++ b/src/app/components/shared/nav-bar/nav-bar.component.scss
@@ -1,6 +1,7 @@
 mat-toolbar{
-    height: 8vh;
-    max-height: 60px;
+    height: 10vh;
+    // max-height: 60px;
+    max-height: 10vh;
     min-height: 50px;
     .spaced{
         flex: 1 1 auto;
