--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,6 +5,7 @@ mat-drawer-container{
       flex-direction: column;
       justify-content: start;
     }
+    overflow-y: hidden;
   }
   overflow-y: hidden;
 
@@ -16,7 +17,7 @@ mat-drawer-container{
 
 .example-container {
     width: 100%;
-    height: 94vh;
+    height: 90vh;
     overflow-y: hidden;
     border: 1px solid rgba(0, 0, 0, 0.5);
     .example-sidenav {
